
** New library 'xdg' with utilities for some XDG standards and specs.

** HTML

+++
*** A new submode of 'html-mode', 'mhtml-mode', is now the default
mode for *.html files.  This mode handles indentation,
fontification, and commenting for embedded JavaScript and CSS.

** New minor mode 'pixel-scroll-mode' provides smooth pixel-level scrolling.


* Incompatible Lisp Changes in Emacs 26.1

+++
*** Command 'dired-mark-extension' now automatically prepends a '.' to the
extension when not present.  The new command 'dired-mark-suffix' behaves
similarly but it doesn't prepend a '.'.

+++
** Certain cond/pcase/cl-case forms are now compiled using a faster jump
table implementation. This uses a new bytecode op 'switch', which isn't
compatible with previous Emacs versions. This functionality can be disabled
by setting 'byte-compile-cond-use-jump-table' to nil.

** 'C-up', 'C-down', 'C-left' and 'C-right' are now defined in term
mode to send the same escape sequences that xterm does.  This makes
things like forward-word in readline work.

---
** hideshow mode got four key bindings that are analogous to outline
mode bindings: 'C-c @ C-a', 'C-c @ C-t', 'C-c @ C-d', and 'C-c @ C-e.'

---
** Customizable variable 'query-replace-from-to-separator'
now doesn't propertize the string value of the separator.
Instead, text properties are added by query-replace-read-from.
Additionally, the new nil value restores pre-24.5 behavior
of not providing replacement pairs via the history.

** Some obsolete functions, variables, and faces have been removed:
*** make-variable-frame-local.  Variables cannot be frame-local any more.
*** From subr.el: window-dot, set-window-dot, read-input, show-buffer,
eval-current-buffer, string-to-int
*** icomplete-prospects-length.
*** All the default-FOO variables that hold the default value of the
FOO variable.  Use 'default-value' and 'setq-default' to access and
change FOO, respectively.  The exhaustive list of removed variables is: